infrastructure/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-root-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      runAsNonRoot: false # Explicitly bad
